--- a/port-site/public/index.html
+++ b/port-site/public/index.html
@@ -22,8 +22,9 @@
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
 
+    <!-- FONTS -->
     <link
-      href="https://fonts.googleapis.com/css?family=Anton|Oxygen"
+      href="https://fonts.googleapis.com/css?family=Anton|Oxygen&display=swap"
       rel="stylesheet"
     />
     <!--
